# news_headlines_bot

./: .env  .env.docker  .evn.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  rbc_debug.html  ria_debug.html
alembic/: env.py
alembic/versions/: 4a6ad0ab351e_change_telegram_id_to_biginteger.py  6c357080e619_init_create_tables_for_users_sources_.py
app/: main.py
app/bot/handlers/: news.py  sources.py  start.py  subscriptions.py
app/db/: init_db.py  models.py  session.py
app/parsers/: base.py  bloomberg.py  fox_business.py  kommersant.py  manager.py  rbk.py  reuters.py  ria.py
app/scheduler/: scheduler.py
app/services/: news_service.py  notification_service.py  subscription_service.py
app/utils/: url_utils.py
