[project]
name = "news_headlines_bot"
version = "0.1.0"
description = "Telegram bot for news generation"
authors = [{ name = "Pavel" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Telegram
    "aiogram>=3.7",
    
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    
    # Parser
    "beautifulsoup4>=4.14",
    "httpx>=0.27",
    "apscheduler>=3.11",
    
    # Config
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    
    # Migrations
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "watchdog>=6.0",
]